--- a/draw pictures/example.html
+++ b/draw pictures/example.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="d400e9e520124db3b30ef5d9881cf7ec" style="width:900px; height:500px;"></div>
+    <div id="7341dc408ed54a6ab01b4915f18a7e62" style="width:900px; height:500px;"></div>
     <script>
-        var chart_d400e9e520124db3b30ef5d9881cf7ec = echarts.init(
-            document.getElementById('d400e9e520124db3b30ef5d9881cf7ec'), 'white', {renderer: 'canvas'});
-        var option_d400e9e520124db3b30ef5d9881cf7ec = {
+        var chart_7341dc408ed54a6ab01b4915f18a7e62 = echarts.init(
+            document.getElementById('7341dc408ed54a6ab01b4915f18a7e62'), 'white', {renderer: 'canvas'});
+        var option_7341dc408ed54a6ab01b4915f18a7e62 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -51,32 +51,32 @@
             "mapType": "china",
             "data": [
                 {
-                    "name": "\u91cd\u5e86",
-                    "value": 104
+                    "name": "\u5e7f\u4e1c",
+                    "value": 51
                 },
                 {
                     "name": "\u5317\u4eac",
-                    "value": 59
+                    "value": 58
                 },
                 {
-                    "name": "\u4e91\u5357",
-                    "value": 65
+                    "name": "\u4e0a\u6d77",
+                    "value": 121
                 },
                 {
                     "name": "\u6c5f\u897f",
-                    "value": 124
+                    "value": 27
                 },
                 {
                     "name": "\u6e56\u5357",
-                    "value": 138
+                    "value": 78
                 },
                 {
                     "name": "\u6d59\u6c5f",
-                    "value": 112
+                    "value": 101
                 },
                 {
                     "name": "\u6c5f\u82cf",
-                    "value": 81
+                    "value": 84
                 }
             ],
             "roam": true,
@@ -128,7 +128,7 @@
         "showLabel": true
     }
 };
-        chart_d400e9e520124db3b30ef5d9881cf7ec.setOption(option_d400e9e520124db3b30ef5d9881cf7ec);
+        chart_7341dc408ed54a6ab01b4915f18a7e62.setOption(option_7341dc408ed54a6ab01b4915f18a7e62);
     </script>
 </body>
 </html>
