revise demand data cleaning

--- a/draw-pictures/china_map.html
+++ b/draw-pictures/china_map.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="8c5c824decd040ada6cc0471d1635e44" style="width:900px; height:500px;"></div>
+    <div id="1aec78572b44441fb4b426c89f2302c0" style="width:900px; height:500px;"></div>
     <script>
-        var chart_8c5c824decd040ada6cc0471d1635e44 = echarts.init(
-            document.getElementById('8c5c824decd040ada6cc0471d1635e44'), 'white', {renderer: 'canvas'});
-        var option_8c5c824decd040ada6cc0471d1635e44 = {
+        var chart_1aec78572b44441fb4b426c89f2302c0 = echarts.init(
+            document.getElementById('1aec78572b44441fb4b426c89f2302c0'), 'white', {renderer: 'canvas'});
+        var option_1aec78572b44441fb4b426c89f2302c0 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -51,32 +51,32 @@
             "mapType": "china",
             "data": [
                 {
-                    "name": "\u91cd\u5e86",
-                    "value": 99
+                    "name": "\u5e7f\u4e1c",
+                    "value": 41
                 },
                 {
                     "name": "\u5317\u4eac",
-                    "value": 91
+                    "value": 110
                 },
                 {
-                    "name": "\u4e91\u5357",
-                    "value": 78
+                    "name": "\u4e0a\u6d77",
+                    "value": 31
                 },
                 {
                     "name": "\u6c5f\u897f",
-                    "value": 20
+                    "value": 46
                 },
                 {
                     "name": "\u6e56\u5357",
-                    "value": 60
+                    "value": 26
                 },
                 {
                     "name": "\u6d59\u6c5f",
-                    "value": 22
+                    "value": 46
                 },
                 {
                     "name": "\u6c5f\u82cf",
-                    "value": 56
+                    "value": 57
                 }
             ],
             "roam": true,
@@ -106,7 +106,7 @@
         "borderWidth": 0
     }
 };
-        chart_8c5c824decd040ada6cc0471d1635e44.setOption(option_8c5c824decd040ada6cc0471d1635e44);
+        chart_1aec78572b44441fb4b426c89f2302c0.setOption(option_1aec78572b44441fb4b426c89f2302c0);
     </script>
 </body>
 </html>
