--- a/crawler/crawler_pandemic/a.html
+++ b/crawler/crawler_pandemic/a.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="e1898c0f2c3c43d98dc822cce459aa59" style="width:1350px; height:750px;"></div>
+    <div id="2b3fc7186c8e4ca5a6b08da4e1fb54d5" style="width:1350px; height:750px;"></div>
     <script>
-        var chart_e1898c0f2c3c43d98dc822cce459aa59 = echarts.init(
-            document.getElementById('e1898c0f2c3c43d98dc822cce459aa59'), 'white', {renderer: 'canvas'});
-        var option_e1898c0f2c3c43d98dc822cce459aa59 = {
+        var chart_2b3fc7186c8e4ca5a6b08da4e1fb54d5 = echarts.init(
+            document.getElementById('2b3fc7186c8e4ca5a6b08da4e1fb54d5'), 'white', {renderer: 'canvas'});
+        var option_2b3fc7186c8e4ca5a6b08da4e1fb54d5 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -44,63 +44,63 @@
             "data": [
                 {
                     "name": "\u7f8e\u56fd",
-                    "value": 90113
-                },
-                {
-                    "name": "\u82f1\u56fd",
-                    "value": 34546
-                },
-                {
-                    "name": "\u610f\u5927\u5229",
-                    "value": 31763
-                },
-                {
-                    "name": "\u897f\u73ed\u7259",
-                    "value": 27563
-                },
-                {
-                    "name": "\u6cd5\u56fd",
-                    "value": 27532
+                    "value": 138247
                 },
                 {
                     "name": "\u5df4\u897f",
-                    "value": 15662
+                    "value": 72833
                 },
                 {
-                    "name": "\u6bd4\u5229\u65f6",
-                    "value": 9005
-                },
-                {
-                    "name": "\u5fb7\u56fd",
-                    "value": 7938
-                },
-                {
-                    "name": "\u4f0a\u6717",
-                    "value": 6937
-                },
-                {
-                    "name": "\u52a0\u62ff\u5927",
-                    "value": 5800
-                },
-                {
-                    "name": "\u8377\u5170",
-                    "value": 5689
+                    "name": "\u82f1\u56fd",
+                    "value": 44915
                 },
                 {
                     "name": "\u58a8\u897f\u54e5",
-                    "value": 5045
+                    "value": 35491
                 },
                 {
-                    "name": "\u4e2d\u56fd",
-                    "value": 4644
+                    "name": "\u610f\u5927\u5229",
+                    "value": 34967
                 },
                 {
-                    "name": "\u571f\u8033\u5176",
-                    "value": 4096
+                    "name": "\u6cd5\u56fd",
+                    "value": 30032
                 },
                 {
-                    "name": "\u745e\u5178",
-                    "value": 3674
+                    "name": "\u897f\u73ed\u7259",
+                    "value": 28406
+                },
+                {
+                    "name": "\u5370\u5ea6",
+                    "value": 23174
+                },
+                {
+                    "name": "\u4f0a\u6717",
+                    "value": 13032
+                },
+                {
+                    "name": "\u79d8\u9c81",
+                    "value": 12054
+                },
+                {
+                    "name": "\u4fc4\u7f57\u65af",
+                    "value": 11422
+                },
+                {
+                    "name": "\u6bd4\u5229\u65f6",
+                    "value": 9782
+                },
+                {
+                    "name": "\u5fb7\u56fd",
+                    "value": 9074
+                },
+                {
+                    "name": "\u52a0\u62ff\u5927",
+                    "value": 8834
+                },
+                {
+                    "name": "\u667a\u5229",
+                    "value": 7024
                 }
             ],
             "radius": [
@@ -133,20 +133,20 @@
         {
             "data": [
                 "\u7f8e\u56fd",
-                "\u82f1\u56fd",
-                "\u610f\u5927\u5229",
-                "\u897f\u73ed\u7259",
-                "\u6cd5\u56fd",
                 "\u5df4\u897f",
+                "\u82f1\u56fd",
+                "\u58a8\u897f\u54e5",
+                "\u610f\u5927\u5229",
+                "\u6cd5\u56fd",
+                "\u897f\u73ed\u7259",
+                "\u5370\u5ea6",
+                "\u4f0a\u6717",
+                "\u79d8\u9c81",
+                "\u4fc4\u7f57\u65af",
                 "\u6bd4\u5229\u65f6",
                 "\u5fb7\u56fd",
-                "\u4f0a\u6717",
                 "\u52a0\u62ff\u5927",
-                "\u8377\u5170",
-                "\u58a8\u897f\u54e5",
-                "\u4e2d\u56fd",
-                "\u571f\u8033\u5176",
-                "\u745e\u5178"
+                "\u667a\u5229"
             ],
             "selected": {},
             "show": false
@@ -166,7 +166,7 @@
     },
     "title": [
         {
-            "text": "\u65b0\u51a0\u80ba\u708e\u5404\u56fd\u7d2f\u8ba1\u6b7b\u4ea1\u6570 05.17"
+            "text": "\u65b0\u51a0\u80ba\u708e\u5404\u56fd\u7d2f\u8ba1\u6b7b\u4ea1\u6570 07.14"
         }
     ],
     "toolbox": {
@@ -200,7 +200,7 @@
         }
     }
 };
-        chart_e1898c0f2c3c43d98dc822cce459aa59.setOption(option_e1898c0f2c3c43d98dc822cce459aa59);
+        chart_2b3fc7186c8e4ca5a6b08da4e1fb54d5.setOption(option_2b3fc7186c8e4ca5a6b08da4e1fb54d5);
     </script>
 </body>
 </html>
